# python-sbvoicedb

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: pub.yml
src/sbvoicedb/: __init__.py  common.py  database.py  download.py  process.py  summary.csv  utils.py
src/sbvoicedb/qt/: SbVoiceDbTreeModel.py  SbVoiceDbTreeWidget.py  SummaryTableModels.py  SummaryTableWidgets.py  __init.__.py
tests/: _test_align.py  _test_database.py  _test_database_data.py  _test_database_summary.py  _test_download.py  _test_waveforms.py  conftest.py  test_all.py
