[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbvoicedb"
description = "Saarbrueken Voice Database Reader module"
readme = "README.rst"
keywords = ["multimedia"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "requests",
    "beautifulsoup4",
    "tqdm",
    "nspfile",
]

[project.urls]
Repository = "https://github.com/tikuma-lsuhsc/python-sbvoicedb"
Issues = "https://github.com/tikuma-lsuhsc/python-sbvoicedb/issues"
Pull_Requests = "https://github.com/tikuma-lsuhsc/python-sbvoicedb/pulls"

[tool.setuptools.dynamic]
version = { attr = "sbvoicedb.__version__" }
